--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
 
       <div class="form-group">
-        <label class="col-md-4 control-label">Service Charge</label>  
+        <label class="col-md-4 control-label">Total Amount</label>  
           <div class="col-md-4 inputGroupContainer">
           <div class="input-group">
               <span class="input-group-addon"><i class="glyphicon glyphicon-gbp"></i></span>
