--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Model Test</title>
+    <title>Service track</title>
 
     <link rel="stylesheet" href="stylee.css">
     <script src="script.js"></script>
